--- a/Array Algorithm.ipynb
+++ b/Array Algorithm.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anagram_str True\n",
-      "anagram_str_manual True\n"
+      "('anagram_str', True)\n",
+      "('anagram_str_manual', True)\n"
      ]
     }
    ],
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(1, 3), (0, 4), (-1, 5), (2, 2)}\n"
+      "set([(0, 4), (1, 3), (-1, 5), (2, 2)])\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,16 +150,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'int'>, {})\n",
-      "defaultdict(<class 'int'>, {2: 1, 4: 1, 1: 1})\n",
-      "None\n"
+      "3\n"
      ]
     }
    ],
@@ -181,37 +179,24 @@
     "import collections\n",
     "\n",
     "def find_missing_elem_col(a1, a2):\n",
-    "    d = collections.defaultdict(int)\n",
-    "    print (d)\n",
-    "    for a in a2:\n",
-    "        d[a] += 1\n",
-    "    print (d)\n",
-    "    \n",
+    "    d = collections.defaultdict(int) \n",
+    "    for a in a1: \n",
+    "        if a not in a2:\n",
+    "            return a\n",
     "print (find_missing_elem_col([1,2,3,3,4], [2,4,1]))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "defaultdict(<class 'list'>, {'TX': ['Austin', 'Houston', 'Dallas'], 'NY': ['Albany', 'Syracuse', 'Buffalo', 'Rochester'], 'CA': ['Sacramento', 'Palo Alto'], 'GA': ['Atlanta']})\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nose'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-62d821e21d79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mnose\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtools\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0masset_equal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nose'"
+      "defaultdict(<type 'list'>, {'NY': ['Albany', 'Syracuse', 'Buffalo', 'Rochester'], 'CA': ['Sacramento', 'Palo Alto'], 'GA': ['Atlanta'], 'TX': ['Austin', 'Houston', 'Dallas']})\n"
      ]
     }
    ],
@@ -225,8 +210,93 @@
     "    \n",
     "print (d)\n",
     "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1011, [90, 1, -3, 3, -80, 1000])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# largest Continuous Sum \n",
+    "test_arr = [-1000, 1,2,5,-8, -9, 20, -70, 90, 1, -3, 3,-80, 1000]\n",
     "\n",
-    "from nose.tools import asset_equal"
+    "def max_cont(a1):\n",
+    "    max_s = cur_s = a1[0]\n",
+    "    max_list = cur_list = [a1[0]]\n",
+    "    \n",
+    "    for a in a1[1:]:\n",
+    "        if cur_s > 0:\n",
+    "            cur_s += a\n",
+    "            cur_list.append(a)\n",
+    "        else:\n",
+    "            cur_s = a\n",
+    "            cur_list = [a]\n",
+    "        \n",
+    "        if max_s < cur_s:\n",
+    "            max_s = cur_s\n",
+    "            max_list = cur_list\n",
+    "            \n",
+    "    return max_s, max_list\n",
+    "\n",
+    "print (max_cont(test_arr))\n",
+    "        \n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reverse sentense\n",
+    "test_param = 'this is a good day'\n",
+    "\n",
+    "def reverse_str(str_para):\n",
+    "    return ' '.join(str_para.strip().split()[::-1])\n",
+    "\n",
+    "def reverse_str_manual(str_para):\n",
+    "    \n",
+    "\n",
+    "\n",
+    "print (reverse_str(test_param))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b.a\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('.'.join(reversed(['a', 'b'])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " "
    ]
   },
   {
@@ -241,26 +311,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
