--- a/Array Algorithm.ipynb
+++ b/Array Algorithm.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,9 +68,9 @@
     }
    ],
    "source": [
-    "# Function find_pair([1,2,3,4,5,6,7,4,4,42,2,3,4], total)\n",
+    "# Function find_pair([1,2,3,4,5,6,7,4,4,42,2,3,4], total), find all possible pair sum up equal to total\n",
     "\n",
-    "def find_pair(int_list, sum_total):\n",
+    "def find_sum_pair(int_list, sum_total):\n",
     "    checked_set = set()\n",
     "    matched_set = set()\n",
     "    \n",
@@ -82,7 +82,7 @@
     "            checked_set.add(i)\n",
     "    return matched_set\n",
     "\n",
-    "print(find_pair([1,2,3,2,4,0,4,5,-1,-2,0,2], 4))\n",
+    "print(find_sum_pair([1,2,3,2,4,0,4,5,-1,-2,0,2], 4))\n",
     "\n",
     "\n"
    ]
@@ -256,9 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "day good a is this\n"
+     ]
+    }
+   ],
    "source": [
     "# reverse sentense\n",
     "test_param = 'this is a good day'\n",
@@ -267,7 +275,7 @@
     "    return ' '.join(str_para.strip().split()[::-1])\n",
     "\n",
     "def reverse_str_manual(str_para):\n",
-    "    \n",
+    "    pass\n",
     "\n",
     "\n",
     "print (reverse_str(test_param))\n"
