--- a/Array Algorithm 2.ipynb
+++ b/Array Algorithm 2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,87 @@
     "print(''.join(missing_pangram(test_param)))\n",
     "     "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "['{']\n",
+      "['{', '(']\n",
+      "['{', '(', '[']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check parentheses for string\n",
+    "test_param = '[]{adsf([)}adsf{adsf)}]'\n",
+    "import re\n",
+    "def check_parentheses(s):\n",
+    "    stack = []\n",
+    "    \n",
+    "    parent_dict = {']': '[', '}': '{', ')': '('}\n",
+    "    parent_start = [parent_dict.get(k) for k in parent_dict]\n",
+    "     \n",
+    "    regex = re.compile('[^\\[\\]{}()]')\n",
+    "    clean_str = regex.sub('', s)\n",
+    "    \n",
+    "    if clean_str[0] not in parent_start:\n",
+    "        return False\n",
+    "    stack = [clean_str[0]]\n",
+    "    \n",
+    "    for a in clean_str[1:]:\n",
+    "        if a in parent_start:\n",
+    "            stack.append(a)\n",
+    "        elif stack:\n",
+    "            # find start symble\n",
+    "            if stack[-1] != parent_dict.get(a):\n",
+    "                return False\n",
+    "            stack.pop()  \n",
+    "            \n",
+    "        print(stack)\n",
+    "    return True\n",
+    "\n",
+    "check_parentheses(test_param)\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
